--- a/css/style.css
+++ b/css/style.css
@@ -87,6 +87,7 @@ animation-timing-function: ease-in-out;
     align-items: center;
     border-radius: 50%;
     background-color: #fff;  
+    -webkit-animation: none !important;
 }
 
 
