--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,10 @@ background: #000;
 p
 {
 color: #fff;
-font-size: 200%;
-text-align:center;
+font-size: 2rem;
+text-align: center;
+max-width: 80%;
+overflow-wrap: break-word;
 }
 
 .container
@@ -20,14 +22,14 @@ align-self: center;
 
 .eyelid
 {
-    position: absolute;
-    z-index: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    background-color: #000; 
-    box-shadow: 0 15px 0 15px #000;
+position: absolute;
+z-index: 1;
+display: flex;
+justify-content: center;
+align-items: center;
+border-radius: 50%;
+background-color: #000; 
+box-shadow: 0 15px 0 15px #000;
     
 animation-name: open-eyes;
 animation-duration: 3s; 
@@ -37,57 +39,58 @@ animation-delay: 0.3s;
 animation-timing-function: ease-in-out;
 }
 @keyframes open-eyes{
-    0% {
-    top: 0;
-    }
-    100% {
-    top: -400%;
-    }
+0% {
+top: 0;
+}
+100% {
+top: -400%;
+}
 }
 
 .eyeball
 {       
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    background-color: #fff; 
-    overflow: hidden;
-    animation: blink 8s cubic-bezier(0.785, 0.135, 0.15, 0.86) 5s infinite;
+position: relative;
+display: flex;
+justify-content: center;
+align-items: center;
+border-radius: 50%;
+background-color: #fff; 
+overflow: hidden;
+animation: blink 8s cubic-bezier(0.785, 0.135, 0.15, 0.86) 5s infinite;
 }
 
 
 .inner-eye
 {   
-    display: flex;
-    justify-content: center;
-    justify-self: center;
-    align-items: center;
-    border-radius: 50%;
-    background-color: #050044;  
+display: flex;
+justify-content: center;
+justify-self: center;
+align-items: center;
+border-radius: 50%;
+background-color: #050044;  
 }
 
 
 .pupil
 {   
-    display: flex;
-    justify-content: center;
-    justify-self: center;
-    align-items: center;
-    border-radius: 50%;
-    background-color: #000;  
+display: flex;
+justify-content: center;
+justify-self: center;
+align-items: center;
+border-radius: 50%;
+background-color: #000;  
 }
 
 .light
-{   position: absolute;
-    display: flex;
-    justify-content: center;
-    justify-self: center;
-    align-items: center;
-    border-radius: 50%;
-    background-color: #fff;  
-    -webkit-animation: none !important;
+{   
+position: absolute;
+display: flex;
+justify-content: center;
+justify-self: center;
+align-items: center;
+border-radius: 50%;
+background-color: #fff;  
+-webkit-animation: none !important;
 }
 
 
@@ -101,99 +104,97 @@ font-size: 350%;
 
 .eyelid
 {  
-    width: 300px;
-    height: 300px
+width: 300px;
+height: 300px
 }
 .eyeball
 {    
-    width: 100px;
-    height: 100px
+width: 100px;
+height: 100px
 }
 
 .inner-eye
 {    
-    width: 40px;
-    height: 40px
+width: 40px;
+height: 40px
 }
 
 .pupil
 {   
-    width: 10px;
-    height: 10px
+width: 10px;
+height: 10px
 }
 
 .light
 {  
-    width: 5px;
-    height: 5px;
-    margin-left: 20px;
+width: 5px;
+height: 5px;
+margin-left: 20px;
 }
 
 @keyframes blink {
-	0%, 8% {
-		height: 100px;
-	}
-	10%, 12% {
-		height: 5px;
-	}
-	14%, 100% {
-		height: 100px;
-	}
+0%, 8% {
+	height: 100px;
+}
+10%, 12% {
+	height: 5px;
+}
+14%, 100% {
+	height: 100px;
+}
 }
 
 }
-
 
 
 @media screen and (min-width: 700px) {
-    h1
+h1
 {
 color:#fff;
 font-size: 1000%;
 }
 .eyelid
 {     
-    width: 600px;
-    height: 600px
+width: 600px;
+height: 600px
 }
 .eyeball
 {    
-    width: 200px;
-    height: 200px
+width: 200px;
+height: 200px
 }
 
 .inner-eye
 {    
-    width: 100px;
-    height: 100px
+width: 100px;
+height: 100px
 }
 
 .pupil
 {    
-    width: 50px;
-    height: 50px
+width: 50px;
+height: 50px
 }
 
 .light
 {   
-    width: 15px;
-    height: 15px;
-    margin-left: 40px;
+width: 15px;
+height: 15px;
+margin-left: 40px;
 }
 
 @keyframes blink {
-	0%, 8% {
-		height: 200px;
-	}
-	10%, 12% {
-		height: 5px;
-	}
-	14%, 100% {
-		height: 200px;
-	}
+0%, 8% {
+	height: 200px;
+}
+10%, 12% {
+	height: 5px;
+}
+14%, 100% {
+	height: 200px;
 }
 }
-
+}
 
 span
 {
@@ -207,7 +208,7 @@ color: red;
 
 .copyright
 {
-font-size: 100%;
+font-size: 1rem;
 font-style: italic;
 }
 
